fixed new joke title spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -153,7 +153,7 @@ btn-primary {
 }
 
 .cssNJ {
-  margin-top: 35vh;
+  margin-top: 15vh;
   margin-bottom: 0;
   max-height: 100vh;
   margin-left: 33.5vw;
